--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=56a8f1bfe2f6b56c57d7a8a8a1e6e635
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -26,7 +26,8 @@ APP_SECRET=
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/ecodesign?serverVersion=8.0"
+DATABASE_URL="mysql://root:mypassword@127.0.0.1:3306/ecodesign?serverVersion=8.0"
+
 
 
 ###< doctrine/doctrine-bundle ###
